--- a/css/main.css
+++ b/css/main.css
@@ -15,21 +15,44 @@ body {
 
 .banner {
   background-color: #2b3851;
+
 }
 
 .robot {
+  display: block;
+  position: absolute;
+  left: 10%;
+  top: 0%;
   width: 320px;
 }
 
 .robot-body {
-  width: 320px;
+  display: block;
+  position: relative;
+  float: left;
+  top: 5em;
+  left: 0;
+  width: 100%;
 }
 
 .robot-brain {
+  position: absolute;
+  left: 40%;
+  top: 5.2em;
   width: 46px;
 }
 
-.robot-head-right,
 .robot-head-left {
+  position: absolute;
+  left: 11%;
+  top: 23%;
   width: 125px;
+}
+
+.robot-head-right {
+  position: absolute;
+  right: 11%;
+  top: 23%;
+  width: 125px;
+
 }
