--- a/css/main.css
+++ b/css/main.css
@@ -15,44 +15,41 @@ body {
 
 .banner {
   background-color: #2b3851;
+  position: relative;
+  width: 231px;
 
 }
 
 .robot {
-  display: block;
   position: absolute;
-  left: 10%;
-  top: 0%;
+  left: 20%;
+  top: 50%;
   width: 320px;
+  transform: translatex(-50%);
 }
 
 .robot-body {
-  display: block;
-  position: relative;
-  float: left;
-  top: 5em;
-  left: 0;
-  width: 100%;
+  width: 320px;
 }
 
 .robot-brain {
   position: absolute;
-  left: 40%;
-  top: 5.2em;
+  left: 43%;
+  top: 0%;
   width: 46px;
 }
 
 .robot-head-left {
   position: absolute;
   left: 11%;
-  top: 23%;
+  top: 0;
   width: 125px;
 }
 
 .robot-head-right {
   position: absolute;
   right: 11%;
-  top: 23%;
+  top: 0;
   width: 125px;
 
 }
